[metadata]
name = npmcv
version = attr: npmcv.__version__
description = Script for calculating CV from cell images.
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Yglesias
author_email = myglesia@uoregon.edu
url = https://github.com/myglesia/Npmcv
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
# directory containing all the packages (e.g.  src/mypkg, src/mypkg/subpkg1, ...)

install_requires =
    numpy
    matplotlib
    mahotas
    pandas
    scipy
    scikit-image
    Pillow
    readlif

[options.packages.find] 
# (always `find` even if `find_namespaces:` was used before)
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
where=src

[options.entry_points]
console_scripts =
    npmcv = npmcv.__main__:run


# transitional
[egg_info]
tag_build = .dev
tag_date = 1

# run: setup.py release sdist bdist_wheel
[aliases]
release = egg_info -Db ''